--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -6,15 +6,24 @@ button:hover {
 }
 
 .book-list {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 26px;
-  padding: 24px;
-  margin: 30px 0;
-  background-color: #f9f9f9;
-}
+    display: grid;
+    grid-template-columns: repeat(1, 1fr); /* 1 column on small screens */
+    gap: 26px;
+    padding: 24px;
+    margin: 30px 0;
+    background-color: #f9f9f9;
+  }
+  
+  @media screen and (min-width: 640px) {
+    .book-list {
+      grid-template-columns: repeat(2, 1fr); /* 2 columns on medium screens */
+    }
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .book-list {
+      grid-template-columns: repeat(4, 1fr); /* 4 columns on large screens */
+    }
+  }
+  
 
